--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -1,5 +1,3 @@
-@import './reset.css';
-
 .no-select {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -129,7 +127,7 @@
     }
 
     .main {
-      /deep/.el-input__inner {
+      :deep(.el-input__inner) {
         border-radius: 1px !important;
       }
 
