--- a/src/assets/css/page/note-page.less
+++ b/src/assets/css/page/note-page.less
@@ -1,7 +1,7 @@
 .note-container {
   height: 100%;
 
-  /deep/.el-scrollbar__wrap {
+  :deep(.el-scrollbar__wrap) {
     overflow-x: hidden;
   }
 }
@@ -17,12 +17,12 @@
     display: flex;
     padding: 0;
 
-    /deep/.btn-dropdown-menu {
+    :deep(.btn-dropdown-menu) {
       border-radius: 5px;
       overflow: hidden;
     }
 
-    /deep/button {
+    :deep(button) {
       height: 35px;
       line-height: 10px;
       font-weight: 400;
@@ -298,13 +298,13 @@
         margin-left: 16px;
         cursor: pointer;
 
-        /deep/.el-image {
+        :deep(.el-image) {
           width: 100%;
           height: 100%;
           border-radius: 3px;
         }
 
-        /deep/.el-image__error {
+        :deep(.el-image__error) {
           font-size: 10px;
           background-color: white;
         }
@@ -315,7 +315,7 @@
       }
 
       &:hover {
-        .article-image /deep/.el-image__error {
+        .article-image :deep(.el-image__error) {
           background: #f5f7fa;
           color: #c0c4cc;
         }
