--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1,3 +1,4 @@
+$maskBagColor: rgba(31, 35, 41, .3);
 .no-select {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -80,7 +81,7 @@
   z-index: 999;
   width: 100%;
   height: 100%;
-  background-color: @maskBagColor;
+  background-color: $maskBagColor;
   overflow: hidden;
   display: flex;
   align-items: center;
